# persona-hub

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.ja.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  profile_pack.md
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: __init__.py  config.py  db.py  deps.py  ids.py  main.py  rate_limit.py  schemas.py  security.py  signals_builder.py  validators.py
apps/api/app/aggregate/: __init__.py  bigfive.py  service.py
apps/api/app/aggregate/data/: bigfive_questions.json
apps/api/app/models/: __init__.py  access.py  api_key.py  base.py  handoff.py  persona.py  signal.py
apps/api/app/routers/: personas.py  signals.py
apps/api/tests/: __init__.py  conftest.py  test_aggregate.py  test_bigfive.py  test_handoff.py  test_personas.py  test_rate_limit.py  test_signals.py
